[gd_scene load_steps=51 format=2]

[ext_resource path="res://Spirit Boxer/Idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/SpiritBoxer.gd" type="Script" id=2]
[ext_resource path="res://Spirit Boxer/Damaged & Death.png" type="Texture" id=3]
[ext_resource path="res://Spirit Boxer/Run.png" type="Texture" id=4]
[ext_resource path="res://Spirit Boxer/attack 1.png" type="Texture" id=5]
[ext_resource path="res://Spirit Boxer/attack 2.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 137, 44 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 5 )
region = Rect2( 0, 44, 137, 44 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 5 )
region = Rect2( 0, 88, 137, 44 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 5 )
region = Rect2( 0, 132, 137, 44 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 5 )
region = Rect2( 0, 176, 137, 44 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 5 )
region = Rect2( 0, 220, 137, 44 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 137, 44 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 6 )
region = Rect2( 0, 44, 137, 44 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 6 )
region = Rect2( 0, 88, 137, 44 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 6 )
region = Rect2( 0, 132, 137, 44 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 6 )
region = Rect2( 0, 176, 137, 44 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 6 )
region = Rect2( 0, 220, 137, 44 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 6 )
region = Rect2( 0, 264, 137, 44 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 6 )
region = Rect2( 0, 308, 137, 44 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 6 )
region = Rect2( 0, 352, 137, 44 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 6 )
region = Rect2( 0, 396, 137, 44 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 6 )
region = Rect2( 0, 440, 137, 44 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 6 )
region = Rect2( 0, 484, 137, 44 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 6 )
region = Rect2( 0, 528, 137, 44 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 137, 44 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 0, 44, 137, 44 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 0, 88, 137, 44 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 3 )
region = Rect2( 0, 176, 137, 44 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 3 )
region = Rect2( 0, 220, 137, 44 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 3 )
region = Rect2( 0, 264, 137, 44 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 3 )
region = Rect2( 0, 308, 137, 44 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 3 )
region = Rect2( 0, 352, 137, 44 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 3 )
region = Rect2( 0, 396, 137, 44 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 3 )
region = Rect2( 0, 440, 137, 44 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 3 )
region = Rect2( 0, 484, 137, 44 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 137, 44 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 0, 44, 137, 44 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 0, 88, 137, 44 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 0, 132, 137, 44 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 137, 44 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 4 )
region = Rect2( 0, 44, 137, 44 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 4 )
region = Rect2( 0, 88, 137, 44 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 4 )
region = Rect2( 0, 132, 137, 44 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 4 )
region = Rect2( 0, 176, 137, 44 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 4 )
region = Rect2( 0, 220, 137, 44 )

[sub_resource type="SpriteFrames" id=105]
animations = [ {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "attack1",
"speed": 8.0
}, {
"frames": [ SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ) ],
"loop": true,
"name": "attack2",
"speed": 12.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=106]
radius = 5.98134
height = 6.04464

[sub_resource type="CircleShape2D" id=107]
radius = 251.127

[sub_resource type="RectangleShape2D" id=108]
extents = Vector2( 60, 10 )

[node name="SpiritBoxer" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -52, -6 )
frames = SubResource( 105 )
animation = "idle"
frame = 1
playing = true
offset = Vector2( 105, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
rotation = -1.56707
shape = SubResource( 106 )

[node name="Vision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 107 )

[node name="Attacking" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacking"]
position = Vector2( -60, -3 )
shape = SubResource( 108 )

[node name="Attack" type="Timer" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]

[node name="Attack2" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Attack2"]
position = Vector2( -60, -3 )
shape = SubResource( 108 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_entered" from="Attacking" to="." method="_on_Attacking_body_entered"]
[connection signal="body_exited" from="Attacking" to="." method="_on_Attacking_body_exited"]
[connection signal="timeout" from="Attack" to="." method="_on_Attack_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="body_entered" from="Attack2" to="." method="_on_Attack2_body_entered"]
